<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="⬅️"
        android:textSize="60sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/divider4"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <Button
        android:id="@+id/buttonRight"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="➡️"
        android:textSize="60sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider7"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/divider4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="⬆️"
        android:textSize="60sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toStartOf="@+id/divider7"
        app:layout_constraintStart_toEndOf="@+id/divider4"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/buttonDown"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="⬇️"
        android:textSize="60sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toStartOf="@+id/divider7"
        app:layout_constraintStart_toEndOf="@+id/divider4"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintVertical_bias="0.9" />

    <View
        android:id="@+id/divider4"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider7"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider7"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider5"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <View
        android:id="@+id/divider8"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toStartOf="@+id/divider4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintVertical_bias="0.322" />

    <View
        android:id="@+id/divider9"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toStartOf="@+id/divider4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider8"
        app:layout_constraintVertical_bias="0.395" />

    <View
        android:id="@+id/divider6"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/textViewAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@+id/divider4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDPad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dpad_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@+id/divider7"
        app:layout_constraintStart_toEndOf="@+id/divider4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewIPAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ipaddress_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextIPAddress"
        app:layout_constraintEnd_toStartOf="@+id/divider10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/editTextIPAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/nowifi_title"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/divider8"
        app:layout_constraintEnd_toStartOf="@+id/divider10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIPAddress" />

    <TextView
        android:id="@+id/textViewPlayerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/player_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/playerSelectionSpinner"
        app:layout_constraintEnd_toStartOf="@+id/divider4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <Spinner
        android:id="@+id/playerSelectionSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/divider9"
        app:layout_constraintEnd_toStartOf="@+id/divider4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerTitle" />

    <View
        android:id="@+id/divider10"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider8"
        app:layout_constraintEnd_toStartOf="@+id/divider4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />


    <TextView
        android:id="@+id/textViewActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/actions_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/divider4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider9" />

    <TextView
        android:id="@+id/textViewConnectionState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/connection_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonViewConnectionState"
        app:layout_constraintEnd_toStartOf="@+id/divider4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/divider10"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <Button
        android:id="@+id/buttonViewConnectionState"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF0000"
        android:clickable="false"
        android:enabled="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/disconnected_state"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider8"
        app:layout_constraintEnd_toStartOf="@+id/divider4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/divider10"
        app:layout_constraintTop_toBottomOf="@+id/textViewConnectionState"
        app:layout_constraintVertical_bias="0.50" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#000000"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/connect_action"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toStartOf="@+id/startGameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewActions" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#000000"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/startgame_action"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toStartOf="@+id/restartGameButton"
        app:layout_constraintStart_toEndOf="@+id/connectButton"
        app:layout_constraintTop_toBottomOf="@+id/textViewActions" />

    <Button
        android:id="@+id/restartGameButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#000000"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/restartgame_action"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toStartOf="@+id/divider4"
        app:layout_constraintStart_toEndOf="@+id/startGameButton"
        app:layout_constraintTop_toBottomOf="@+id/textViewActions" />

</androidx.constraintlayout.widget.ConstraintLayout>